fix a few performance issues in the consisting support spotted by findbugs.